# OS

./: .gitignore  README.md
Colloquium/: .eslintrc.js  .gitignore  README.md  Task.md  index.js  jest.config.js  package.json
Colloquium/src/factorial/: factorial.js  index.js
Colloquium/src/linked-list/: index.js  linked-list.js
Colloquium/src/unique-array/: index.js  unique-array.js
Colloquium/tests/factorial/: factorial.examples.js  factorial.test.js
Colloquium/tests/unique-array/: unique-array.examples.js  unique-array.test.js
Colloquium2/: README.md  Singleton.cpp
Colloquium3/: README.md
Lab4/20/src/: Sender.cpp  utils.h
Lab4/20/tests/: CMakeLists.txt
Lab4/98/src/: CMakeLists.txt  Receiver.cpp  Sender.cpp
Lab4/98/tests/: CMakeLists.txt
lab1/: CMakeLists.txt  README.md
lab1/Creator/: CMakeLists.txt  creator.cpp
lab1/Main/: CMakeLists.txt  main.cpp
lab1/Reporter/: CMakeLists.txt  reporter.cpp
lab1/Shared/: Employee.h
lab1/tests/: CMakeLists.txt  tests.cpp
lab2/: CMakeLists.txt  README.md
lab2/include/: array_processor.h
lab2/src/cpp14/: array_processor_cpp14.cpp  main_cpp14.cpp
lab2/src/cpp98/: array_processor_cpp98.cpp  main_cpp98.cpp
lab2/tests/cpp14/: test_cpp14.cpp
lab2/tests/cpp98/: test_cpp98.cpp
lab3/: README.md
lab3/Lab3 C++11/src/: main.cpp
lab3/cpp20/include/: common.h  marker.h
lab3/cpp20/src/: main.cpp  marker.cpp
lab3/cpp20/tests/: test_marker.cpp
lab3/cpp98/include/: common.h  marker.h
lab3/cpp98/src/: main.cpp  marker.cpp
lab3/cpp98/tests/: test_marker.cpp
lab4/20/: CMakeLists.txt
lab4/20/src/: CMakeLists.txt  Receiver.cpp  common.h
lab4/20/tests/: ipc_tests.cpp
lab4/98/: CMakeLists.txt
lab4/98/src/: common.h
lab4/98/tests/: ipc_tests.cpp
lab5/14/: CMakeLists.txt  Client.cpp  Server.cpp  common.h
lab5/98/: CMakeLists.txt  Client.cpp  Server.cpp
